20211208/pbiering: 3.3.2
- HdFbTrueColorOsd.c: do not avoid printing of partial chars, as calculation of Width has issues

20211204/pbiering: 3.3.1
- HdOsdProviderSupport.h: relax CanHandleAreas to catch overlapping subtitle areas by y+1 (workaround for vdr < 2.5.2)

20211203/pbiering:
- HdFbTrueColorOsd: fix DrawText in case of OSD has not 100% size
- ReelBoxDevice: disable sound mixer calls in HDMI_ONLY mode

20211202/pbiering: 3.3.0
- add RPM spec file
- HdFbTrueColorOsd: fix DrawText (right alignment + background box)

20210304/pbiering: 3.2.0.2021.03.04
- improve Pixmap support in HdFbTrueColorOsd (skindesigner plugin tested skins: 'blackholefredo' 'shady_KISSpb')

20210303/pbiering:
- add initial Pixmap support to HdFbTrueColorOsd

20210224/pbiering:
- fix improper working of HdFbTrueColorOsd HdTrueColorOsd
- fix improper working of PictureAdjustment menu

20210214/pbiering:
- apply patch from ua0lnj for newer libpng

20210213/pbiering:
- import sources from https://bitbucket.org/ua0lnj/
- fixed a lot of compilation warnings
- fixed a bunch of compilation errors
- 