@@ -1,3 +1,6 @@
+20211208/pbiering:
+- HdFbTrueColorOsd.c: avoid printing invisible chars, as calculation of Width has issues
+
 20211208/pbiering: 3.3.2
 - HdFbTrueColorOsd.c: do not avoid printing of partial chars, as calculation of Width has issues
 
